--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.7.0
 arrow==1.3.0
+astroid==3.3.5
 binaryornot==0.4.4
 certifi==2024.8.30
 chardet==5.2.0
@@ -8,6 +9,7 @@ charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 cookiecutter==2.6.0
+dill==0.3.9
 fastapi==0.115.6
 flet==0.25.1
 flet-cli==0.25.1
@@ -19,16 +21,20 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+isort==5.13.2
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 oauthlib==3.2.2
 packaging==24.2
+platformdirs==4.3.6
 psycopg2==2.9.10
 pydantic==2.10.3
 pydantic_core==2.27.1
 Pygments==2.18.0
+pylint==3.3.2
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -44,6 +50,7 @@ SQLAlchemy==2.0.36
 starlette==0.41.3
 text-unidecode==1.3
 toml==0.10.2
+tomlkit==0.13.2
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 urllib3==2.2.3
