--- a/.pylintrc
+++ b/.pylintrc
@@ -1,14 +1,20 @@
 [MASTER]
 
 ignore-patterns=
-  .*_ui\.py,
-  database.py
+  database.py,
 
 disable= 
   C0114, 
   C0115, 
   C0116,
+  C0415,
   E0611,
   I1101,
   R0903,
-  
+  R0913,
+  R0917,
+  C0103,
+  C0301,
+  R0801,
+  W0640,
+  R0401,
